# plantcortex

./: .env.example  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agents/: dossier.py  m5_compliance.py  m6_patterns.py
api/: main.py
core/: config.py  embeddings.py  graph_repo.py  llm.py  ontology.py  resolver.py  vector_repo.py
data/: tlp_lexicon.csv
data/seed/: manifest.json
data/seed/gold/: gold_extraction.json
data/seed/pnid/: PID-U2-001.layer.json
data/seed/reserve/: reserve_work_orders.xlsx
data/seed/voice/: VN-001.txt
data/seed/work_orders/: work_orders.csv  work_orders.xlsx
docs/: DEMO_VIDEO.md  JUDGE_QA.md
eval/: benchmark_qa.jsonl  report.md  run.py
pipelines/: __init__.py
pipelines/m1_ingest/: chunk.py  extract.py  parse.py  pipeline.py  tlp.py
pipelines/m2_pnid/: geometric.py  pipeline.py  vision.py
pipelines/m3_retrieval/: answer.py  communities.py  engine.py  retrieve.py  router.py  schemas.py
prompts/: answer.md  extract.md  pnid_read.md  router.md  tlp.md
scripts/: generate_seed_corpus.py  ingest_corpus.py  seed_demo.py
tests/: conftest.py  test_agents.py  test_api.py  test_extract.py  test_graph_repo.py  test_ingest_e2e.py  test_ontology.py  test_patterns.py  test_pnid.py  test_resolver.py  test_retrieval.py  test_seed_corpus.py  test_tlp.py
web/: deck.html  field.html  index.html
